# solar-system-opengl

./: .env  .gitignore  CMakeLists.txt  README.md
include/: input_handler.h  orbit_radii.h  planet_radii.h  planet_speeds.h  texture_loader.h  textures.h
src/: input_handler.cpp  main.cpp  texture_loader.cpp
